paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_002/target.compile.log
warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_002/target.rs:81:13
   |
81 |         let mut c: T2 = S2 { x: 30 };
   |             ----^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0503]: cannot use `a` because it was mutably borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_002/target.rs:43:17
   |
41 |     let p: &mut T1 = &mut a;
   |                      ------ `a` is borrowed here
42 |
43 |     if takes_t1(a) != 11 {
   |                 ^ use of borrowed `a`
...
59 |     if takes_tp1(p) != 13 {
   |                  - borrow later used here

error[E0503]: cannot use `a` because it was mutably borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_2/sample_002/target.rs:47:17
   |
41 |     let p: &mut T1 = &mut a;
   |                      ------ `a` is borrowed here
...
47 |     if takes_s1(a) != 12 {
   |                 ^ use of borrowed `a`
...
59 |     if takes_tp1(p) != 13 {
   |                  - borrow later used here

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0503`.